Software page reconstruction

--- a/web/css/software/index.css
+++ b/web/css/software/index.css
@@ -122,8 +122,8 @@
 
 .project-dropdown
 {
-	margin-top:10px;
-	font-size:12px;
+	margin-top:2px;
+	font-size:14px;
 
 }
 .project-dropdown-label
@@ -148,3 +148,26 @@
 {
 	font-size:12px !important;
 }
+
+.project-egci
+{
+	position:fixed;
+	z-index:100;
+	background-color: #f8f9fa;
+	top:11%;
+	right:0%;
+	width:250px;
+	/*height:100px;*/
+	
+}
+
+.project-egci-content
+{
+	padding: 10px 5px 5px 5px;
+}
+
+.invisible
+{
+	display:none;
+}
+
