--- a/web/css/site/site.css
+++ b/web/css/site/site.css
@@ -3,6 +3,13 @@ body {
     height: 100%;
 }
 
+.background-image{
+ 
+    background-image: url('../img/egci-head.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .wrap {
     min-height: 100%;
     height: auto;
