--- a/web/css/software/index.css
+++ b/web/css/software/index.css
@@ -155,15 +155,20 @@
 	z-index:100;
 	background-color: #f8f9fa;
 	top:11%;
-	right:0%;
-	
+	right:1%;
+	width:225px;
 	/*height:100px;*/
 	
 }
 
 .project-egci-content
 {
-	padding: 10px 5px 5px 5px;
+	padding: 2px 2px 2px 2px;
+}
+
+.project-dropdown
+{
+	width:200px;
 }
 
 .invisible
