Change font size and font colors in views,added text field for instructions in software models

--- a/web/css/site/site.css
+++ b/web/css/site/site.css
@@ -151,3 +151,9 @@ a.desc:after {
     /*display: block;*/
     word-wrap: break-word;
 }
+
+.headers
+{
+     color:#E6833B;
+     font-size: 30px;
+}
