--- a/web/css/software/run.css
+++ b/web/css/software/run.css
@@ -159,7 +159,7 @@
   border-radius: 25px;
 }
 
-.headers {
+.run-headers {
 	border-top-left-radius: 25px;
 	border-top-right-radius:25px;
 	background-color:rgb(169,169,169);
