--- a/web/css/site/site.css
+++ b/web/css/site/site.css
@@ -7,7 +7,8 @@ body {
  
     background-image: url('/img/egci-head.png');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
+   // background-size: cover;
 }
 
 .wrap {
