Fixed a syntax error on css that created a problem with buttons

--- a/web/css/software/run.css
+++ b/web/css/software/run.css
@@ -194,9 +194,9 @@
 	font-size:10px;
 }
 
-.select-file-btn:hover, .select-file-multiple-btn:hover, , .fill-array-field-btn:hover
+.select-file-btn:hover, .select-file-multiple-btn:hover,  .fill-array-field-btn:hover
 {
-	font-size:10px;
+	font-size:15px;
 	background-color: #efefef;
 	color:black;
 }
