--- a/web/css/components/roCrate.css
+++ b/web/css/components/roCrate.css
@@ -1,7 +1,7 @@
 
 .modal-size
 {
-	width:500px;
+	width:700px;
 	max-height:1000px; 
    
 }
@@ -14,11 +14,19 @@ font-size: 25px;
 .body-row
 {
 font-size:15px; 
-margin-bottom:10px;
+margin-bottom:20px;
 }
 
 .field-row
 {
- 
-margin-top:10px;
+ margin-top:15px;
+ padding-bottom: 0px;
+}
+
+.local-file
+{
+	padding-top:0px;
+	font-size: 12px;
+	color:grey;
+	font-style: italic;
 }	
