--- a/web/css/components/roCrate.css
+++ b/web/css/components/roCrate.css
@@ -29,4 +29,9 @@ margin-bottom:20px;
 	font-size: 12px;
 	color:grey;
 	font-style: italic;
-}	
+}
+
+.rocrate-description
+{
+	padding-left: 20px;
+}
