Corrections in dataset download form

--- a/web/css/components/downloadDataset.css
+++ b/web/css/components/downloadDataset.css
@@ -90,4 +90,20 @@ margin-bottom:10px;
 .modal-message
 {
 	font-size: 25px;
+}
+
+.mount-field-url
+{
+	padding-left: 15px;
 }	
+
+.mount-field-zenodo
+{
+	padding-left: 15px;
+}	
+
+.mount-field-helix
+{
+	padding-left: 15px;
+}	
+
