--- a/web/css/software/index.css
+++ b/web/css/software/index.css
@@ -166,9 +166,16 @@
 	display:none;
 }
 
-.run-button, .edit-button, .delete-button
+.run-button
 {
-	font-size:12px !important;
+	font-size: 16px !important;
+	color: green !important;
+}
+
+.edit-button, .delete-button, .analyze-button
+{
+	font-size: 16px !important;
+	color: #6c757d !important;
 }
 
 
